--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ajuda Cidadão</title>
-    <link rel="icon" type="image/png" sizes="30x30" href="/assets/img/logotipo_sem_fundo/6 (2).png">
+    <link rel="icon" type="image/png" sizes="30x30" href="assets/img/logotipo_sem_fundo/6 (2).png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CSS (para os ícones) -->
@@ -19,16 +19,16 @@
 <body> <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container"> <!-- Logo da Empresa --> <a class="navbar-brand" href="#"> <img
-                    src="../assets/img/logotipo_sem_fundo/1 (2).png" alt="Logo Finanças Inteligentes" width="250"
+                    src="assets/img/logotipo_sem_fundo/1 (2).png" alt="Logo Ajuda Cidadão" width="250"
                     height="auto"> </a> <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"> <a class="nav-link" href="../index.html">Início</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="index.html">Início</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="#servicos">Serviços</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="#contato">Contato</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="../pages/faq.html">Perguntas Frequentes</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="pages/faq.html">Perguntas Frequentes</a> </li>
 
                 </ul>
             </div>
