--- a/pages/faq.html
+++ b/pages/faq.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ajuda Cidadão</title>
-    <link rel="icon" type="image/png" sizes="30x30" href="/assets/img/logotipo_sem_fundo/6 (2).png">
+    <link rel="icon" type="image/png" sizes="30x30" href="../assets/img/logotipo_sem_fundo/6 (2).png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CSS (para os ícones) -->
