--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a class="nav-link" href="index.html">Início</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="#servicos">Serviços</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="#contato">Contato</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#Footer">Contato</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="pages/faq.html">Perguntas Frequentes</a> </li>
 
                 </ul>
@@ -268,7 +268,7 @@
             <div class="div" data-aos="fade-right">
             <h2>Tem Dúvidas?</h2>
             <p>Acesse agora nossa área de Perguntas Frequentes</p>
-            <a href="#">Perguntas Frequentes &rarr;</a>
+            <a href="pages/faq.html">Perguntas Frequentes &rarr;</a>
         </div>
         </div>
         <div class="faq-image" data-aos="fade-top">
@@ -280,12 +280,14 @@
             <h2 id="ptsf" class="mb-4" data-aos="fade-down">Pronto para transformar suas finanças?</h2>
             <p class="mb-4"  data-aos="fade-top">Nossa equipe está aqui para ajudar você a alcançar seus objetivos financeiros. Entre em
                 contato para uma consulta personalizada.</p>
-            <button  data-aos="fade-top" class="btn btn-light btn-lg mt-3" onclick="mostrarMensagem()">Fale Conosco</button>
+                <a href="#">
+            <button  data-aos="fade-top" class="btn btn-light btn-lg mt-3" >Fale Conosco</button>
+        </a>
         </div>
     </section>
     
     <!-- Footer -->
-    <footer class="bg-dark text-light py-5">
+    <footer id="Footer" class="bg-dark text-light py-5">
         <div class="container">
             <div class="row"> <!-- Seção: Sobre Nós -->
                 <div class="col-md-4">
@@ -441,7 +443,6 @@
     });
     </script>
     
-
 </body>
 
 </html>
