--- a/pages/faq.html
+++ b/pages/faq.html
@@ -111,60 +111,60 @@
             color: #2A0944;
             /* Texto em roxo escuro */
         }
+
         /* Footer Styles */
-footer {
-    background-color: #343a40;
-    color: #adb5bd;
-    padding: 40px 0;
-}
+        footer {
+            background-color: #343a40;
+            color: #adb5bd;
+            padding: 40px 0;
+        }
 
-footer h5 {
-    font-size: 1.2rem;
-    color: #fff;
-    margin-bottom: 1.5rem;
-}
+        footer h5 {
+            font-size: 1.2rem;
+            color: #fff;
+            margin-bottom: 1.5rem;
+        }
 
-footer p,
-footer li,
-footer a {
-    font-size: 0.9rem;
-    color: #adb5bd;
-}
+        footer p,
+        footer li,
+        footer a {
+            font-size: 0.9rem;
+            color: #adb5bd;
+        }
 
-footer a {
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
+        footer a {
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
 
-footer a:hover {
-    color: #007bff;
-}
+        footer a:hover {
+            color: #007bff;
+        }
 
-footer ul {
-    list-style: none;
-    padding: 0;
-}
+        footer ul {
+            list-style: none;
+            padding: 0;
+        }
 
-footer ul li {
-    margin-bottom: 0.8rem;
-}
+        footer ul li {
+            margin-bottom: 0.8rem;
+        }
 
-footer ul li i {
-    margin-right: 10px;
-}
+        footer ul li i {
+            margin-right: 10px;
+        }
 
-footer .fab {
-    font-size: 1.5rem;
-}
+        footer .fab {
+            font-size: 1.5rem;
+        }
 
-footer .fab:hover {
-    color: #007bff;
-}
+        footer .fab:hover {
+            color: #007bff;
+        }
 
-footer hr {
-    border-color: rgba(255, 255, 255, 0.1);
-}
-
+        footer hr {
+            border-color: rgba(255, 255, 255, 0.1);
+        }
     </style>
 </head>
 
@@ -179,8 +179,8 @@ footer hr {
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"> <a class="nav-link" href="../index.html">Início</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="#servicos">Serviços</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="#contato">Contato</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="../index.html#servicos">Serviços</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#Footer">Contato</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="../pages/faq.html">Perguntas Frequentes</a> </li>
 
                 </ul>
@@ -246,7 +246,8 @@ footer hr {
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#faqAccordion">
                                 <div class="card-body">
-                                    Sim, realizamos empréstimos na conta de luz. Para fazermos a simulação, o titular deve portar documento com foto (RG), CPF e conta de luz mais recente.
+                                    Sim, realizamos empréstimos na conta de luz. Para fazermos a simulação, o titular
+                                    deve portar documento com foto (RG), CPF e conta de luz mais recente.
                                 </div>
                             </div>
                         </div>
@@ -273,55 +274,55 @@ footer hr {
             </div>
         </div>
     </section>
-        <!-- Footer -->
-        <footer class="bg-dark text-light py-5">
-            <div class="container">
-                <div class="row"> <!-- Seção: Sobre Nós -->
-                    <div class="col-md-4">
-                        <h5>Sobre Nós</h5>
-                        <p class="small">A Finanças Inteligentes é uma empresa dedicada a ajudar seus clientes a tomar
-                            decisões financeiras inteligentes e personalizadas. Oferecemos uma ampla gama de serviços para
-                            atender às suas necessidades.</p>
-                    </div> <!-- Seção: Links Rápidos -->
-                    <div class="col-md-4">
-                        <h5>Links Rápidos</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-light">Início</a></li>
-                            <li><a href="#servicos" class="text-light">Serviços</a></li>
-                            <li><a href="#contato" class="text-light">Contato</a></li>
-                            <li><a href="#sobre" class="text-light">Sobre Nós</a></li>
-                            <li><a href="#" class="text-light">Política de Privacidade</a></li>
-                        </ul>
-                    </div> <!-- Seção: Contato -->
-                    <div class="col-md-4">
-                        <h5>Contato</h5>
-                        <ul class="list-unstyled">
-                            <li><i class="fas fa-envelope"></i>ajudacidadaosf@gmail.com</li>
-                            <li><i class="fas fa-phone"></i> +55 (13) 99667-9977 </li>
-                            <li><i class="fas fa-map-marker-alt"></i> R. Ver. João de Almeida Batista, 80, Itanhaém, SP</li>
-                        </ul>
-                    </div>
-                </div> <!-- Linha separadora -->
-                <hr class="my-4">
-                <div class="row">
-                    <!-- Redes Sociais -->
-                    <div class="col-md-6 d-flex align-items-center">
-                        <p class="mb-0">&copy; 2024 Ajuda Cidadão. Todos os direitos reservados.</p>
-                    </div>
-                    <div class="col-md-6 text-md-end">
-                        <a href="https://www.facebook.com/ajudacidadao.oficial/" class="text-light me-3">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="https://www.instagram.com/ajudacidadao.oficial/" class="text-light me-3">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/in/ajuda-cidadao-994b98266/" class="text-light">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                    </div>
+    <!-- Footer -->
+    <footer id="Footer" class="bg-dark text-light py-5">
+        <div class="container">
+            <div class="row"> <!-- Seção: Sobre Nós -->
+                <div class="col-md-4">
+                    <h5>Sobre Nós</h5>
+                    <p class="small">A Finanças Inteligentes é uma empresa dedicada a ajudar seus clientes a tomar
+                        decisões financeiras inteligentes e personalizadas. Oferecemos uma ampla gama de serviços para
+                        atender às suas necessidades.</p>
+                </div> <!-- Seção: Links Rápidos -->
+                <div class="col-md-4">
+                    <h5>Links Rápidos</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-light">Início</a></li>
+                        <li><a href="#servicos" class="text-light">Serviços</a></li>
+                        <li><a href="#contato" class="text-light">Contato</a></li>
+                        <li><a href="#sobre" class="text-light">Sobre Nós</a></li>
+                        <li><a href="#" class="text-light">Política de Privacidade</a></li>
+                    </ul>
+                </div> <!-- Seção: Contato -->
+                <div class="col-md-4">
+                    <h5>Contato</h5>
+                    <ul class="list-unstyled">
+                        <li><i class="fas fa-envelope"></i>ajudacidadaosf@gmail.com</li>
+                        <li><i class="fas fa-phone"></i> +55 (13) 99667-9977 </li>
+                        <li><i class="fas fa-map-marker-alt"></i> R. Ver. João de Almeida Batista, 80, Itanhaém, SP</li>
+                    </ul>
+                </div>
+            </div> <!-- Linha separadora -->
+            <hr class="my-4">
+            <div class="row">
+                <!-- Redes Sociais -->
+                <div class="col-md-6 d-flex align-items-center">
+                    <p class="mb-0">&copy; 2024 Ajuda Cidadão. Todos os direitos reservados.</p>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <a href="https://www.facebook.com/ajudacidadao.oficial/" class="text-light me-3">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com/ajudacidadao.oficial/" class="text-light me-3">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/ajuda-cidadao-994b98266/" class="text-light">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS and dependencies -->
     <script>
