--- a/pages/politica.html
+++ b/pages/politica.html
@@ -35,7 +35,8 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+
+    <div class="container" style="padding-top: 150px;">
         <h1>Política de Privacidade</h1>
         <p><strong>Última atualização: 13 de setembro de 2024</strong></p>
 
