--- a/pages/faq.html
+++ b/pages/faq.html
@@ -12,160 +12,7 @@
     <!-- FontAwesome CSS (para os ícones) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Custom CSS -->
-    <style>
-        @font-face {
-            font-family: 'MinhaFonte';
-            src: url('../assets/tpg/Comfortaa-Bold.ttf') format('woff2'),
-                url('../tpg/Comfortaa-Bold.woff') format('woff'),
-                url('../tpg/Comfortaa-Bold.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        /* General Styles */
-        body {
-            font-family: 'MinhaFonte', sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f9f9f9;
-        }
-
-        header nav ul {
-            list-style: none;
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-        }
-
-        header nav ul li a {
-            text-decoration: none;
-            color: #fff;
-            font-weight: 600;
-            padding: 5px 10px;
-            transition: color 0.3s ease;
-        }
-
-        /* Navbar Styles */
-        .navbar {
-            padding: 10px 0;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-            transition: top 0.3s;
-            /* Transição suave ao esconder/mostrar */
-            background-color: white;
-        }
-
-        .navbar-nav .nav-link {
-            font-size: 18px;
-            font-weight: 500;
-            padding: 8px 15px;
-            color: #2A0944;
-        }
-
-        .navbar-nav .nav-link:hover {
-            color: #007bff;
-        }
-
-        .navbar-toggler {
-            border: none;
-        }
-
-        .faq-section {
-            padding: 50px 0;
-        }
-
-        .faq-title {
-            margin-bottom: 30px;
-            color: #2A0944;
-            /* Título em roxo escuro */
-        }
-
-        .card {
-            margin-bottom: 20px;
-            border: 1px solid #3FA796;
-            /* Borda verde água */
-        }
-
-        .card-header {
-            background-color: #FEC260;
-            /* Fundo amarelo para o cabeçalho do card */
-            color: #2A0944;
-            /* Texto em roxo escuro */
-        }
-
-        .btn-link {
-            color: #2A0944;
-            /* Cor do texto do botão do link */
-        }
-
-        .btn-link:hover {
-            color: #3FA796;
-            /* Cor de hover para o texto do botão do link */
-        }
-
-        .card-body {
-            background-color: #FFFFFF;
-            /* Fundo branco para o corpo do card */
-            color: #2A0944;
-            /* Texto em roxo escuro */
-        }
-
-        /* Footer Styles */
-        footer {
-            background-color: #343a40;
-            color: #adb5bd;
-            padding: 40px 0;
-        }
-
-        footer h5 {
-            font-size: 1.2rem;
-            color: #fff;
-            margin-bottom: 1.5rem;
-        }
-
-        footer p,
-        footer li,
-        footer a {
-            font-size: 0.9rem;
-            color: #adb5bd;
-        }
-
-        footer a {
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        footer a:hover {
-            color: #007bff;
-        }
-
-        footer ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        footer ul li {
-            margin-bottom: 0.8rem;
-        }
-
-        footer ul li i {
-            margin-right: 10px;
-        }
-
-        footer .fab {
-            font-size: 1.5rem;
-        }
-
-        footer .fab:hover {
-            color: #007bff;
-        }
-
-        footer hr {
-            border-color: rgba(255, 255, 255, 0.1);
-        }
-    </style>
+     <link rel="stylesheet" href="../assets/css/faq.css">
 </head>
 
 <body>
