--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
             </div>
         </div>
     </section>
+    <br>
     <!-- Hero Section -->
     <section class="hero-section d-flex align-items-center">
         <div class="container">
@@ -376,14 +377,13 @@
             </div>
         </div>
     </section>
+    <div class="containersectionseparator" style="background-color: #fcca00; padding-top: 7%;"></div>
     <div class="faq-section">
         <div class="faq-content">
             <div class="div" data-aos="fade-right">
                 <h2>Tem Dúvidas?</h2>
                 <p>Acesse agora nossa área de Perguntas Frequentes</p>
                 <a href="pages/faq.html">Perguntas Frequentes &rarr;</a>
-                <br>
-                <br>
             </div>
         </div>
         <div class="faq-image" data-aos="fade-top">
