--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="pages/faq.html">Perguntas Frequentes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/landing-page.html">Perguntas Frequentes</a>
+                        <a class="nav-link" href="pages/landing-page.html">Simulação</a>
                     </li>
                 </ul>
                 <div class="d-flex align-items-center ms-3">
