--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </section>
         <div class="container mt-5" style="background-color: #2A0944;">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card text-center shadow-sm h-100">
                         <div class="card-body">
                             <div class="icon mb-3">
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card text-center shadow-sm h-100">
                         <div class="card-body">
                             <div class="icon mb-3">
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card text-center shadow-sm h-100">
                         <div class="card-body">
                             <div class="icon mb-3">
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card text-center shadow-sm h-100">
                         <div class="card-body">
                             <div class="icon mb-3">
@@ -136,10 +136,6 @@
             </div>
         </div>
     </div>
-    <style>
-
-    </style>
-
     <!-- Formulário que aparece ao clicar no botão -->
     <div class="form-popup" id="formHelp">
         <h2 style="color: #FEC260;">Preencha Algumas Informações</h2>
